<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AFD3E2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cooking_guide"
        android:textAlignment="center"
        android:textColor="#146C94"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_toDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_meals"
        android:layout_marginTop="80dp"
        android:backgroundTint="#19A7CE"
        app:layout_constraintBottom_toTopOf="@id/search_mealIngredient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading" />

    <Button
        android:id="@+id/search_mealIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_meals_by_ingredient"
        android:backgroundTint="#19A7CE"
        app:layout_constraintBottom_toTopOf="@id/search_meal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_toDB" />

    <Button
        android:id="@+id/search_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for_meals"
        android:backgroundTint="#19A7CE"
        app:layout_constraintBottom_toTopOf="@id/searchWebService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_mealIngredient" />

    <Button
        android:id="@+id/searchWebService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_meal_from_web_service"
        android:backgroundTint="#19A7CE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_meal" />

</androidx.constraintlayout.widget.ConstraintLayout>